--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>Ken asos vat hayos ne</h1>
+    <h2>vala asos ne</h2>
 </body>
 </html>
