--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Ken asos vat hayos ne</h1>
     <h2>vala asos ne kigoror</h2>
+    <p>ki jfdjfj jnjf</p>
+    <img src="anaaa.jpg" alt="">
 </body>
 </html>
