--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>vala asos ne kigoror</h2>
     <p>ki jfdjfj jnjf</p>
     <img src="anaaa.jpg" alt="">
+    <img src="avatar.jpg" alt="">
 </body>
 </html>
